# conway

./: Cargo.toml  README.md
patterns/: slidegun.cells
src/: controls.rs  draw.rs  file.rs  life.rs  main.rs  render.rs  text.rs  ui.rs
