[package]
name = "conway"
version = "0.2.0"
license = "MIT"
repository = "https://github.com/Injng/conway/"
description = "Game of Life in Rust and SDL2"
readme = "README.md"
edition = "2021"

[dependencies]
sdl2 = { version = "0.37.0", features = ["ttf"] }

[package.metadata]
assets = ["assets/*"]
