[package]
name = "conway"
version = "1.0.0"
license = "MIT"
repository = "https://github.com/Injng/conway/"
description = "Game of Life in Rust and SDL2"
readme = "README.md"
edition = "2021"

[dependencies]
rfd = "0.15.1"
sdl2 = { version = "0.37.0", features = ["image", "ttf"] }

[package.metadata]
assets = ["assets/*"]
